--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
+    <style>
+        .item{
+            color: lightcoral;
+            padding: 30px;
+            margin: 10px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <div></div>
+    <div id="container">
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+        <div class="item">Item 5</div>
+        <div class="item">Item 6</div>
+    </div>
 </body>
 </html>
