--- a/index.html
+++ b/index.html
@@ -5,22 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <style>
+        #container{
+            display: flex;
+            background: lightgreen;
+            /* flex-flow: row wrap; */
+            /* align-content: space-around; */
+            /* justify-content: space-evenly;
+            align-items: baseline; */
+            width: 600px;
+            height: 100vh;
+        }
+        
         .item{
-            color: lightcoral;
+            background: lightcoral;
             padding: 30px;
             margin: 10px;
             text-align: center;
+            /* flex-basis: 160px; */
+            flex: 1 1 auto;
         }
+
     </style>
 </head>
 <body>
     <div id="container">
         <div class="item">Item 1</div>
         <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
+        <div class="item" style="align-self baseline;">Item 3</div>
         <div class="item">Item 4</div>
-        <div class="item">Item 5</div>
-        <div class="item">Item 6</div>
     </div>
 </body>
 </html>
