--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="container">
         <div class="item">Item 1</div>
         <div class="item">Item 2</div>
-        <div class="item" style="align-self baseline;">Item 3</div>
+        <div class="item" style="align-self: baseline;">Item 3</div>
         <div class="item">Item 4</div>
     </div>
 </body>
